# Git-My-Notes

./: README.md
obsidian-github/: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  test.md
obsidian-github/src/: App.tsx  index.css  main.tsx
obsidian-github/src-tauri/: Cargo.toml  tauri.conf.json
obsidian-github/src-tauri/capabilities/: default.json
obsidian-github/src-tauri/src/: lib.rs  main.rs
obsidian-github/src/components/: BranchManager.tsx  CommitHistory.tsx  ConflictBanner.tsx  ConflictResolution.tsx  Editor.tsx  ExportDialog.tsx  GitHubSetup.tsx  KeyboardShortcuts.tsx  Preview.tsx  SearchPalette.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TagBrowser.tsx  WelcomeScreen.tsx
obsidian-github/src/lib/: markdownPreview.ts
obsidian-github/src/store/: index.ts
